# mycetes

./: .env  .env_example  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: app_errors.rs  commands.rs  main.rs  places_handler.rs  queries.rs  spot_handler.rs  state_manager.rs
api/src/requests/: mod.rs  photo.rs  spot.rs
api/src/responses/: mod.rs  spot.rs
api/src/use_cases/: create_place_usecase.rs  create_spot_usecase.rs  mod.rs
apps/web/: .gitignore  angular.json  package.json  pnpm-lock.yaml
apps/web/src/: index.html
apps/web/src/app/: app.routes.ts  app.ts
apps/web/src/app/features/map/pages/map-page/: map-page.page.ts
db/: Cargo.toml
db/src/: lib.rs
domain/: Cargo.toml
domain/src/: domain_event.rs  file_storage.rs  lib.rs  repository.rs  stats.rs
domain/src/aggregates/: mod.rs  place_aggregate.rs  spot_aggregate.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/file_storage/: mod.rs
infrastructure/src/file_storage/mock/: mock_file_storage.rs  mod.rs
infrastructure/src/file_storage/s3/: garage_client.rs  mod.rs  s3_file_storage.rs
infrastructure/src/repository/: mod.rs
infrastructure/src/repository/db/: db_helper.rs  spots_db_repository.rs  user_db_repository.rs
infrastructure/src/repository/mem/: mod.rs  spots_memory_repository.rs
infrastructure/src/stats/: mod.rs  stats_client.rs  stats_stub.rs
misc/docker/: Dockerfile  docker-compose.yml  garage.Dockerfile  garage.toml  telegraf.Dockerfile  telegraf.conf
misc/migrations/: 1_create_places.sql  1_create_user.sql  1_create_users.sql  202604170100_create_spot.sql  2_create_place.sql  2_create_places.sql
repository/: Cargo.toml
repository/src/: lib.rs
repository/src/db/: db_helper.rs  migration.rs  mod.rs  places_db_repository.rs  spots_db_repository.rs  user_db_repository.rs
repository/src/mem/: mod.rs  places_memory_repository.rs  spots_memory_repository.rs  user_memory_repository.rs
stats/: Cargo.toml
stats/src/: lib.rs  stats_client.rs  stats_stub.rs
web/: Cargo.toml
web/src/: commands.rs  main.rs  places_handler.rs  queries.rs  requests.rs  responses.rs  state_manager.rs  use_cases.rs
web/src/requests/: mod.rs
web/src/responses/: mod.rs  place.rs
web/src/use_cases/: create_user_usecase.rs
