[workspace]
resolver = "3"
members = [ "domain", "api", "infrastructure"]

#[profile.release]
#opt-level = "z"     # optimize for size (use "s" for balance, "z" for smallest)
#lto = true          # enable link-time optimization
#codegen-units = 1   # better optimizations, slower build
#panic = "abort"     # smaller binary, no unwinding
#strip = true        # automatically strip symbols (cargo 1.70+)

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false