[package]
name = "api"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"     # optimize for size (use "s" for balance, "z" for smallest)
lto = true          # enable link-time optimization
codegen-units = 1   # better optimizations, slower build
panic = "abort"     # smaller binary, no unwinding
strip = true        # automatically strip symbols (cargo 1.70+)

[dependencies]
axum = { version = "0.8.9"}
tokio = { version = "1.52.0", features = ["full"] }
serde = { version = "1.0.228" }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
stats = { path = "../stats"}
repository = { path = "../repository"}
domain = { path = "../domain"}