[package]
name = "api"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"     # optimize for size (use "s" for balance, "z" for smallest)
lto = true          # enable link-time optimization
codegen-units = 1   # better optimizations, slower build
panic = "abort"     # smaller binary, no unwinding
strip = true        # automatically strip symbols (cargo 1.70+)

[dependencies]
axum = { version = "0.8.9", features = ["multipart"]}
tokio = { version = "1.52.0", features = ["full"] }
serde = { version = "1.0.228" }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
stats = { path = "../stats"}
repository = { path = "../repository"}
domain = { path = "../domain"}
uuid = { version = "1.23.1", features = ["v4"] }
http = "1.3.1"
tower-http = { version = "0.6.8", features = ["trace"] }