[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
datadog-statsd = "0.1.2"
async-trait = { version = "0.1.89" }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "migrate", "chrono"] }
tracing = { version = "0.1.44" }
anyhow = "1.0.102"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.131.0"
aws-credential-types = "1.2.14"
bytes = "1.11.1"
mime_guess = "2.0.5"
domain = { path = "../domain"}