[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4"}
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219" }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
stats = { path = "../stats"}
repository = { path = "../repository"}
domain = { path = "../domain"}